# auto-sade

./: Cargo.toml  build.rs  busqueda_comunicaciones.py
src/: busqueda_comunicaciones.rs  config.rs  excel_handler.rs  file_processor.rs  gui.rs  main.rs  pdf_extractor.rs  web_automation.rs
